Bug 204826 - SVGLengthValue::fromCSSPrimitiveValue() doesn't have enough context to resolve font-relative units
Summary: SVGLengthValue::fromCSSPrimitiveValue() doesn't have enough context to resolv...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: Safari Technology Preview
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Antoine Quint
URL:
Keywords: InRadar
: 251495 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-12-03 17:25 PST by Simon Fraser (smfr)
Modified: 2023-02-03 13:38 PST (History)
8 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Fraser (smfr) 2019-12-03 17:25:00 PST
imported/w3c/web-platform-tests/svg/painting/parsing/stroke-dasharray-computed.svg tries to set stroke-dasharray to a calc value that includes em units. SVGLengthValue::fromCSSPrimitiveValue() can't handle this, because it doesn't have enough context to resolve font-relative units.
Comment 1 Antoine Quint 2023-02-02 03:45:38 PST
*** Bug 251495 has been marked as a duplicate of this bug. ***
Comment 2 Antoine Quint 2023-02-02 03:48:19 PST
Pull request: https://github.com/WebKit/WebKit/pull/9511
Comment 3 EWS 2023-02-03 13:37:50 PST
Committed 259836@main (af0cc1eb786a): <https://commits.webkit.org/259836@main>

Reviewed commits have been landed. Closing PR #9511 and removing active labels.
Comment 4 Radar WebKit Bug Importer 2023-02-03 13:38:19 PST
<rdar://problem/105018931>