Cherry-pick af0cc1eb786a. rdar://problem/105018931

SVGLengthValue::fromCSSPrimitiveValue() doesn't have enough context to resolve font-relative units
    https://bugs.webkit.org/show_bug.cgi?id=204826

    Reviewed by Antti Koivisto.

    Pass a CSSToLengthConversionData argument to SVGLengthValue::fromCSSPrimitiveValue() such that we
    may call computeLength() on the provided primitive value to resolve font-relative units.

    This also changes the behavior of baseline-shift which now accounts for ex units, so
    adjusting the relevant test to include a font to have reliable measurements across platforms
    and a new expected value.

    * LayoutTests/imported/w3c/web-platform-tests/svg/painting/parsing/stroke-dasharray-computed-expected.txt:
    * LayoutTests/imported/w3c/web-platform-tests/web-animations/responsive/strokeDasharray-expected.txt:
    * LayoutTests/svg/css/scientific-numbers-expected.txt:
    * LayoutTests/svg/css/scientific-numbers.html:
    * Source/WebCore/style/StyleBuilderConverter.h:
    (WebCore::Style::BuilderConverter::convertSVGLengthValue):
    * Source/WebCore/style/StyleBuilderCustom.h:
    (WebCore::Style::BuilderCustom::applyValueBaselineShift):
    * Source/WebCore/svg/SVGLengthValue.cpp:
    (WebCore::SVGLengthValue::fromCSSPrimitiveValue):
    * Source/WebCore/svg/SVGLengthValue.h:

    Canonical link: https://commits.webkit.org/259836@main

Canonical link: https://commits.webkit.org/259548.128@safari-7615-branch